force-app/main/default/objects/Account_Maintenance_Request__c/Account_Maintenance_Request__c.object-meta.xml
<CustomObject>
    <label>Account Maintenance Request</label>
    <nameField>
        <displayFormat>AMR-{00000}</displayFormat>
        <label>Account Maintenance Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Maintenance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>