force-app/main/default/objects/Account_Maintenance_Request__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager+</fullName>
            </value>
            <value>
                <fullName>Director+</fullName>
            </value>
            <value>
                <fullName>VP+</fullName>
            </value>
            <value>
                <fullName>C-Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>