force-app/main/default/objects/Account_Maintenance_Request__c/fields/Job_Level_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Job_Level_Keywords__c</fullName>
    <label>Job Level Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>