force-app/main/default/objects/Account_Maintenance_Request__c/fields/New_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Owner_Name__c</fullName>
    <formula>New_Owner__r.FirstName + &apos; &apos; + New_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Owner Name</label>
    <type>Text</type>
</CustomField>