force-app/main/default/objects/Account_Maintenance_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ownership Update</fullName>
            </value>
            <value>
                <fullName>Target Account Update</fullName>
            </value>
            <value>
                <fullName>Data Enrichment</fullName>
            </value>
            <value>
                <fullName>Source New Contacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>