force-app/main/default/objects/Account_Maintenance_Request__c/fields/Request_Types_Selected__c.field-meta.xml
<CustomField>
    <fullName>Request_Types_Selected__c</fullName>
    <formula>IF(
   AND(
      INCLUDES(Request_Type__c, &apos;Target Account Update&apos;),
      INCLUDES(Request_Type__c, &apos;Ownership Update&apos;)
   ), 
   &apos;Ownership Update;Target Account Update&apos;,
   IF(
      INCLUDES(Request_Type__c,&apos;Target Account Update&apos;), 
      &apos;Target Account Update&apos;,
      IF(
         INCLUDES(Request_Type__c,&apos;Ownership Update&apos;)
         ,&apos;Ownership Update&apos;,
         IF(
            INCLUDES(Request_Type__c,&apos;Data Enrichment&apos;)
            ,&apos;Data Enrichment&apos;,
            IF(
               INCLUDES(Request_Type__c,&apos;Source New Contacts&apos;)
               ,&apos;Source New Contacts&apos;,null
            )
         )
         
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Types Selected</label>
    <type>Text</type>
</CustomField>