force-app/main/default/objects/Account_Maintenance_Request__c/fields/Target_Account_Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_Removal_Reason__c</fullName>
    <label>Target Account Removal Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>