force-app/main/default/objects/Account_Maintenance_Request__c/fields/Target_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_Tier__c</fullName>
    <label>Target Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority 0</fullName>
            </value>
            <value>
                <fullName>Priority 1</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
                <isActive>false</isActive>
                <label>Tier 1</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
                <isActive>false</isActive>
                <label>Tier 2</label>
            </value>
            <value>
                <fullName>Tier 3</fullName>
                <isActive>false</isActive>
                <label>Tier 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>