force-app/main/default/objects/Account_Maintenance_Request__c/fields/Target_Account_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_Update_Type__c</fullName>
    <label>Target Account Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Target Account</fullName>
            </value>
            <value>
                <fullName>Remove Target Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>