force-app/main/default/objects/Account_Maintenance_Request__c/listViews/All_Pending_Requests.listView-meta.xml
<ListView>
    <fullName>All_Pending_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Request_Status__c</columns>
    <columns>Assigned_To_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>All Pending Requests</label>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>