force-app/main/default/objects/Account_Maintenance_Request__c/listViews/My_PENDING_Account_Maint_Requests.listView-meta.xml
<ListView>
    <fullName>My_PENDING_Account_Maint_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Request_Type__c</columns>
    <columns>Assigned_To_User__c</columns>
    <columns>Request_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>My PENDING Account Maint Requests</label>
</ListView>